# Mega_Sena

./: README.md  megasena.py  pyproject.toml  requirements.txt
